Update Nothing To See Here.html

--- a/Nothing To See Here.html
+++ b/Nothing To See Here.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-
+<!-- Congrats! You captured the flag! Please inform the-one-in-charge -->
 <h1>Nothing here</h1>
 </body>
-<!-- The key to the next level:Jvunyhaz Fvb ohcl dvu Zovd aopz tlzzhnl av aol vul pu johynl av jshpt fvby wypgl! -->
-<!-- The clue to the next level: 7-->
+
 </html>
