Update Nothing To See Here.html

--- a/Nothing To See Here.html
+++ b/Nothing To See Here.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <!-- Congrats! You captured the flag! Please inform the-one-in-charge -->
-<h1>Nothing here</h1>
+<h1 style="font-family: Arial;">Nothing here</h1>
 </body>
 
 </html>
