--- a/Nothing To See Here.html
+++ b/Nothing To See Here.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <!-- Congrats! You captured the flag! Please inform the-one-in-charge -->
-<h1 style="font-family: Arial;">Nothing here</h1>
+<p1 style="font-family: Arial;font-size:128;font-weight:Bold">Nothing here</p1>
 </body>
 
 </html>
