--- a/Nothing To See Here.html
+++ b/Nothing To See Here.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<!-- Congrats! You captured the flag! Please inform the-one-in-charge -->
-<p1 style="font-family: Arial;font-size:128;font-weight:Bold">Nothing here</p1>
-</body>
 
+<p1 style="font-family: Arial;font-size:128px;font-weight:Bold">Nothing here</p1>
+</body>
+<!-- Congrats! You captured the flag! Please inform the-one-in-charge -->
 </html>
