Update Nothing To See Here.html

--- a/Nothing To See Here.html
+++ b/Nothing To See Here.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <script src="idex.js"></script>
 <body>
 <p1 style="font-family: Arial;font-size:128px;font-weight:Bold">Nothing here</p1>
 </body>
